# Mind2Web-2-BY

./: .gitignore  README.md  pyproject.toml  run_eval.py
eval_scripts/: ad_patent.py  animation_movies.py  buy_monitor.py  find_parks.py  llava_commit.py  lol_sylas.py  nyc_sport_event.py  overleaf_template.py  spotify_artists.py  yu_lineage.py
mind2web2/: __init__.py  eval_runner.py  eval_toolkit.py  evaluator.py  verification_tree.py
mind2web2/api_tools/: __init__.py  tool_arxiv.py  tool_googlemap.py  tool_pdf.py
mind2web2/llm_client/: __init__.py  api_cost.py  azure_openai_client.py  base_client.py  bedrock_anthropic_client.py  openai_client.py
mind2web2/utils/: __init__.py  agent_sheet_name_map.py  cache.py  get_tool_codes.py  load_eval_script.py  logging_setup.py  misc.py  page_info_retrieval.py  path_config.py  process_answers.py
